--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "main": "index.js",
   "scripts": {
     "test": "npm test",
-    "start": "ts-node ./src/main.ts"
+    "start": "ts-node ./src/main.ts",
+    "build": "tsc"
   },
   "devDependencies": {
     "@types/node": "^25.2.3",
