--- a/package.json
+++ b/package.json
@@ -12,8 +12,12 @@
     "build": "tsc"
   },
   "devDependencies": {
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^25.2.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
+  },
+  "dependencies": {
+    "jsdom": "^28.0.0"
   }
 }
