--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@inquirer/prompts": "^8.2.0",
     "jsdom": "^28.0.0",
+    "open": "^11.0.0",
     "ora": "^9.3.0"
   }
 }
