--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node ./src/main.ts",
     "build": "tsc",
-    "prepare": "npm run build"
+    "prepare": "rm -rf dist && npm run build"
   },
   "keywords": [
     "soundboard",
