--- a/package.json
+++ b/package.json
@@ -5,16 +5,12 @@
   "license": "MIT",
   "author": "blacksagres",
   "type": "commonjs",
-  "main": "dist/main.js",
-  "bin": {
-    "soundboard-downloader": "./dist/main.js"
-  },
+  "main": "src/main.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "ts-node ./src/main.ts",
     "build": "tsc",
-    "prepare": "npm run build",
-    "postinstall": "if [ -f src/main.ts ] && [ ! -d dist ]; then npm run build; fi"
+    "prepare": ""
   },
   "keywords": [
     "soundboard",
