--- a/.github/publish.yml
+++ b/.github/publish.yml
@@ -1,4 +1,4 @@
-name: Release to NPM
+name: Publish to NPM
 
 on:
   push:
@@ -6,7 +6,7 @@ on:
       - "v*"
 
 jobs:
-  release:
+  publish:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
