--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "soundboard-downloader": "./dist/main.js"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "vitest",
     "start": "ts-node ./src/main.ts",
     "build": "tsc",
     "prepare": "npm run build",
@@ -38,7 +38,8 @@
   "devDependencies": {
     "@types/jsdom": "^27.0.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.18"
   },
   "dependencies": {
     "@inquirer/prompts": "^8.2.0",
