--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,4 +1,4 @@
-name: Publish to NPM
+name: 📦️ Publish to NPM
 
 on:
   push:
@@ -6,7 +6,21 @@ on:
       - "v*"
 
 jobs:
+  test:
+    name: Run tests before publishing
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "npm"
+      - run: npm install
+      - run: npm test
+
   publish:
+    name: Publish package
+    needs: test # Wait for tests to pass
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
