--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,3 +1,5 @@
+name: ➡️ Release please
+
 on:
   push:
     branches:
@@ -8,10 +10,21 @@ permissions:
   issues: write
   pull-requests: write
 
-name: release-please
-
 jobs:
+  test:
+    name: Run tests
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "npm"
+      - run: npm install
+      - run: npm test
+
   release-please:
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - uses: googleapis/release-please-action@v4
