--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "test": "vitest",
     "start": "ts-node ./src/main.ts",
-    "build": "tsc",
+    "build": "tsc -p tsconfig.prod.json",
     "prepublishOnly": "npm run build"
   },
   "keywords": [
