--- a/tsconfig.prod.json
+++ b/tsconfig.prod.json
@@ -1,4 +1,8 @@
 {
   "extends": "./tsconfig",
-  "exclude": ["**/*.test.ts", "**/*.mock.ts"]
+  "exclude": ["**/*.test.ts", "**/*.mock.ts"],
+  "compilerOptions": {
+    "declaration": false,
+    "declarationMap": false
+  }
 }
