--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -5,6 +5,10 @@ on:
     tags:
       - "v*"
 
+permissions:
+  id-token: write # Required for OIDC
+  contents: read
+
 jobs:
   publish:
     name: Publish package
@@ -15,6 +19,7 @@ jobs:
         with:
           node-version: 20
           registry-url: "https://registry.npmjs.org"
+      - run: npm ci
       - run: npm install
       - run: npm run build
       - run: npm publish
