--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,17 +11,14 @@ permissions:
 
 jobs:
   publish:
-    name: Publish package
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
       - uses: actions/setup-node@v4
         with:
-          node-version: 20
+          node-version: "24"
           registry-url: "https://registry.npmjs.org"
       - run: npm ci
-      - run: npm install
-      - run: npm run build
+      - run: npm run build --if-present
       - run: npm publish
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
