fix: prevent republishing existing versions

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,4 +21,17 @@ jobs:
           registry-url: "https://registry.npmjs.org"
       - run: npm ci
       - run: npm run build --if-present
-      - run: npm publish --provenance
+      - name: Check if version exists
+        id: check_version
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          if npm view @purpleproser/soundboard-downloader-cli@$VERSION >/dev/null 2>&1; then
+            echo "version_exists=true" >> $GITHUB_OUTPUT
+            echo "Version $VERSION already exists in npm registry"
+          else
+            echo "version_exists=false" >> $GITHUB_OUTPUT
+            echo "Version $VERSION does not exist in npm registry"
+          fi
+      - name: Publish to npm (only if version doesn't exist)
+        if: steps.check_version.outputs.version_exists != 'true'
+        run: npm publish --provenance
