chore: stabilize repository and prepare for v1.2.3

--- a/.github/workflows/release-please.yml
+++ b/.github/workflows/release-please.yml
@@ -1,9 +1,9 @@
-name: ➡️ Release please
+name: ➡️ Release please (DISABLED)
 
 on:
   push:
     branches:
-      - main
+      - disabled-temporarily
 
 permissions:
   contents: write
