test: add comprehensive debug logging for CI investigation

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,7 +20,10 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Run tests
-        run: npm test -- --reporter=verbose
+      - name: Run tests with debug output
+        run: npm test -- --reporter=verbose --run
         env:
           NODE_OPTIONS: --max-old-space-size=4096
+      - name: Show test output even on failure
+        if: always()
+        run: echo "Test output captured above"
