--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@inquirer/prompts": "^8.2.0",
     "jsdom": "^28.0.0",
     "open": "^11.0.0",
-    "ora": "^9.3.0"
+    "ora": "^9.3.0",
+    "valibot": "^1.2.0"
   }
 }
